--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.card{
+  width: 400px;
+}
+
+.card-img-top {
+  width: 200px;
+}
+.row {
+  text-align: center;
+}
