--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("https://oldschoolgrappling.com/wp-content/uploads/2018/08/Background-opera-speeddials-community-web-simple-backgrounds.jpg");
+  background-image: url("https://github.com/krcook1980/ReactEmployeeDirectory/blob/main/public/assets/map.png.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
